cleanup of demo layout

--- a/t5-tree-demo/src/main/webapp/index.html
+++ b/t5-tree-demo/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     The following list links to different examples of usages of the tree component, roughly ordered from simple to complex
     <ul>
     <li><a href="SimpleStaticTree">SimpleStaticTree</a> is what the name suggests.
+    <li><a href="FileTree">FileTree</a> shows a recursively defined tree with lazy loading via AJAX
     </ul>
   </body>
 </html>
